--- a/QuizNotebook.ipynb
+++ b/QuizNotebook.ipynb
@@ -23,7 +23,7 @@
     "import seaborn as sns\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.metrics import accuracy_score\n",
     "import xgboost as xgb\n",
@@ -436,13 +436,22 @@
    "execution_count": 10,
    "id": "0b9c9a11-f592-4f00-8258-78709c39e621",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extra Trees Accuracy: 0.9285\n"
+     ]
+    }
+   ],
    "source": [
     "# Train an Extra Trees Classifier\n",
     "et_classifier = ExtraTreesClassifier(random_state=1)\n",
     "et_classifier.fit(X_train, y_train)\n",
     "et_predictions = et_classifier.predict(X_test)\n",
-    "et_accuracy = accuracy_score(y_test, et_predictions)"
+    "et_accuracy = accuracy_score(y_test, et_predictions)\n",
+    "print(\"Extra Trees Accuracy:\", et_accuracy)"
    ]
   },
   {
@@ -490,6 +499,197 @@
     "lgb_accuracy = accuracy_score(y_test, lgb_predictions)\n",
     "print(\"LightGBM Accuracy:\", lgb_accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a62f57dd-4ce6-494f-9565-a6798c02392f",
+   "metadata": {},
+   "source": [
+    "### Q17\n",
+    "\n",
+    "Using the ExtraTreesClassifier as your estimator with cv=5, n_iter=10, scoring = 'accuracy', n_jobs = -1, verbose = 1 and random_state = 1. What are the best hyperparameters from the randomized search CV?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9830bbd4-996e-4926-820b-92a053c990bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
+      "Best hyperparameters: {'n_estimators': 300, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'auto', 'max_depth': None, 'bootstrap': False}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the parameter grid for the randomized search\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300, 500, 1000],\n",
+    "    'max_depth': [None, 5, 10],\n",
+    "    'min_samples_split': [2, 5, 7, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4, 6, 8],\n",
+    "    'max_features': ['auto', 'sqrt', 'log2', None],\n",
+    "    'bootstrap': [True, False]\n",
+    "}\n",
+    "\n",
+    "# Create the ExtraTreesClassifier estimator\n",
+    "estimator = ExtraTreesClassifier(random_state=1)\n",
+    "\n",
+    "# Perform the randomized search\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=estimator,\n",
+    "    param_distributions=param_grid,\n",
+    "    scoring='accuracy',\n",
+    "    n_iter=10,\n",
+    "    cv=5,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=1,\n",
+    "    random_state=1\n",
+    ")\n",
+    "\n",
+    "# Fit the randomized search to your data\n",
+    "random_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Get the best hyperparameters\n",
+    "best_params = random_search.best_params_\n",
+    "print(\"Best hyperparameters:\", best_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cf80042-1887-4c77-a36b-ff531bee3fa1",
+   "metadata": {},
+   "source": [
+    "### Q18\n",
+    "\n",
+    "Train a new ExtraTreesClassifier Model with the new Hyperparameters from the RandomizedSearchCV (with random_state = 1). Is the accuracy of the new optimal model higher or lower than the initial ExtraTreesClassifier model with no hyperparameter tuning?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2776d511-bd42-44d9-a844-dc20ca5a7595",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the new ExtraTreesClassifier model with the best hyperparameters from RandomizedSearchCV\n",
+    "new_model = ExtraTreesClassifier(\n",
+    "    n_estimators=300,\n",
+    "    max_depth=None, \n",
+    "    min_samples_split=2,\n",
+    "    min_samples_leaf=1, \n",
+    "    max_features='auto',\n",
+    "    bootstrap=True,\n",
+    "    random_state=1\n",
+    ")\n",
+    "\n",
+    "# Train the new model on the training data\n",
+    "new_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions with the new model\n",
+    "new_predictions = new_model.predict(X_test)\n",
+    "\n",
+    "# Compute the accuracy of the new model\n",
+    "new_accuracy = accuracy_score(y_test, new_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1324ee88-ae34-4fca-9ecd-3932dcd1806a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best hyperparameters Score: 0.9225\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Best hyperparameters Score:\", new_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4438d14c-5e6e-4e3f-8d1d-639b28645e14",
+   "metadata": {},
+   "source": [
+    "### Q20\n",
+    "\n",
+    "Find the feature importance using the optimal ExtraTreesClassifier model. Which features are the most and least important respectively?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "583f200b-74af-4739-983b-bbbd9ff96b59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Feature  Importance\n",
+      "0         0    0.115475\n",
+      "1         1    0.116290\n",
+      "2         2    0.112337\n",
+      "3         3    0.112816\n",
+      "4         4    0.041764\n",
+      "5         5    0.043297\n",
+      "6         6    0.042655\n",
+      "7         7    0.042842\n",
+      "8         8    0.088458\n",
+      "9         9    0.094496\n",
+      "10       10    0.096088\n",
+      "11       11    0.093482\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the feature importances\n",
+    "feature_importances = new_model.feature_importances_\n",
+    "# Create a DataFrame to join the feature importances with column names\n",
+    "feature_importance_df = pd.DataFrame({'Feature': range(X_train.shape[1]), 'Importance': feature_importances})\n",
+    "\n",
+    "print(feature_importance_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4c222b3d-4604-499a-a024-d56aa500537c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.11547547, 0.11628977, 0.11233702, 0.11281598, 0.04176358,\n",
+       "       0.04329658, 0.04265472, 0.04284235, 0.08845826, 0.094496  ,\n",
+       "       0.09608829, 0.09348199])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_importances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec8aae3-4b77-4226-91dd-d6df0b014e07",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
